# telegram-connector-mcp

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
.specify/memory/: constitution.md
docs/: spec.md
specs/001-telegram-mcp-server/: plan.md  quickstart.md  spec.md  tasks.md
src/tg_mcp/: __init__.py  __main__.py  cache.py  catalog.py  client.py  config.py  server.py  toon.py
src/tg_mcp/db/: __init__.py  migrations.py  schema.sql
src/tg_mcp/ops/: __init__.py  analytics.py  channels.py  folders.py  interact.py
