[project]
name = "tg-mcp"
version = "0.1.0"
description = "Telegram MCP server — full client capabilities for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "telethon>=1.36",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
    "cryptg>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tg_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
